[gd_scene load_steps=5 format=3 uid="uid://di7cqo1ujfv5n"]

[ext_resource type="Texture2D" uid="uid://b0npnkt128wpy" path="res://assets/ui/universal/gold.png" id="1_5uya7"]
[ext_resource type="Script" path="res://scences/ui/battle/reward_button.gd" id="1_c2gcw"]

[sub_resource type="LabelSettings" id="LabelSettings_rj76w"]
font_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_hmuun"]
font_size = 6

[node name="RewardButton" type="Button"]
custom_minimum_size = Vector2(75, 14)
offset_right = 75.0
offset_bottom = 14.0
script = ExtResource("1_c2gcw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CostControl" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CostHbox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CostControl"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 7.0
offset_right = 24.0
offset_bottom = 6.0
theme_override_constants/separation = 1

[node name="CostIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/CostControl/CostHbox"]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
texture = ExtResource("1_5uya7")
expand_mode = 1
stretch_mode = 5

[node name="CostAmount" type="Label" parent="MarginContainer/HBoxContainer/CostControl/CostHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "38"
label_settings = SubResource("LabelSettings_rj76w")
horizontal_alignment = 2
vertical_alignment = 1

[node name="CustomIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("1_5uya7")
expand_mode = 1
stretch_mode = 5

[node name="CustomLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "INF gold"
label_settings = SubResource("LabelSettings_hmuun")
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
